Dark mode delay fix

--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -1091,6 +1091,16 @@ video {
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
+.dark\:\!bg-slate-600:where(.dark, .dark *) {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity)) !important;
+}
+
+.dark\:\!bg-slate-400:where(.dark, .dark *) {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity)) !important;
+}
+
 .dark\:\!text-\[\#fdfdfd\]:where(.dark, .dark *) {
   --tw-text-opacity: 1 !important;
   color: rgb(253 253 253 / var(--tw-text-opacity)) !important;
